# ComputerGraphics

./: .gitignore  CMakeLists.txt  TestCases.xlsx  TransformTest.m  beckmandistribution.m  main.cpp  materialTest.json  resources.rc  sdl.json  spacecraft.json  spacecraft.spline  spline.design.convert.txt
SDL/: RefractionTest.json  bathroom.json  conifg.json  house.json  materialTest.json  sdl.json  sdl_all.json  spacecraft.json
include/: AVX.h  Matrix.h  Ray.h  RenderEngineCore.h  Vector.h
include/Camera/: Camera.h  CameraUtils.h
include/Light/: Color3.h  DirectionalLight.h  Light.h  LightCore.h  PointLight.h
include/LinearAlgebra/: LinearAlgebra.h  Matrix.h  Vector.h
include/Materials/: Material.h  MaterialsLibrary.h
include/Objects/: BooleanDifference.h  BooleanIntersection.h  BooleanObject.h  BooleanUnion.h  BoundingBox.h  Box.h  Hit.h  Intersection.h  Object.h  ObjectCore.h  Plane.h  Sphere.h  TaperedCylinder.h
include/Render/: CookTorranceShader.h  PhongShader.h  RenderEngine.h  Shader.h
include/Scene/: AntiAliassing.h  EmissionShader.h  PhongShader.h  SDLParser.h  Scene.h  Shader.h
include/Screen/: LiveScreen.h  Screen.h
include/Textures/: Checkerboard.h  Perlin.h  Texture.h  WaterTexture.h  WoodTexture.h
include/Transform/: Transform.h
include/Utils/: Color3.h  Intersection.h  Logger.h  Options.h  RenderTask.h  SafeQueue.h  Stopwatch.h  ThreadPool.h
src/: CMakeLists.txt  Matrix.cpp  Ray.cpp  Vector.cpp
src/Camera/: CMakeLists.txt  Camera.cpp  CameraUtils.cpp
src/Light/: CMakeLists.txt  Color3.cpp  Light.cpp  PointLight.cpp
src/LinearAlgebra/: CMakeLists.txt  Matrix.cpp  Vector.cpp
src/Materials/: CMakeLists.txt  Material.cpp  MaterialsLibrary.cpp
src/Objects/: BooleanDifference.cpp  BooleanIntersection.cpp  BooleanObject.cpp  BooleanUnion.cpp  BoundingBox.cpp  Box.cpp  CMakeLists.txt  Intersection.cpp  Object.cpp  Plane.cpp  Sphere.cpp  TaperedCylinder.cpp
src/Render/: CMakeLists.txt  CookTorranceShader.cpp  PhongShader.cpp  RenderEngine.cpp
src/Scene/: CMakeLists.txt  PhongShader.cpp  SDLParser.cpp  Scene.cpp
src/Screen/: CMakeLists.txt  LiveScreen.cpp  Screen.cpp
src/Textures/: CMakeLists.txt  Checkerboard.cpp  Perlin.cpp  Texture.cpp  WaterTexture.cpp  WoodTexture.cpp
src/Transform/: CMakeLists.txt  Transform.cpp
src/Utils/: CMakeLists.txt  Color3.cpp  Intersection.cpp  Logger.cpp
src/lib_json/: CMakeLists.txt
tests/: CMakeLists.txt  tests.cpp
tests/Camera/: TCamera.cpp
tests/LinearAlgebra/: TMatrix.cpp  TVector.cpp
tests/Objects/: TBoolean.cpp  TBox.cpp  TObject.cpp  TPlane.cpp  TSphere.cpp  TTaperedCylinder.cpp
tests/Transform/: TTransform.cpp
